# test-cmake

./: .gitignore
conan/: CMakeLists.txt  conanfile.txt  main.cpp
exec1/util/: test1.cpp  test2.cpp
learning_to_install/prj1/: CMakeLists.txt
learning_to_install/prj1/src/package1/: CMakeLists.txt  Config.cmake.in
learning_to_install/prj1/src/package1/somelib1/: CMakeLists.txt
learning_to_install/prj1/src/package1/somelib2/: CMakeLists.txt  source1.cpp
learning_to_install/prj1/src/package2/: Config.cmake.in
learning_to_install/prj1/src/package2/somelib1/: CMakeLists.txt  header2.hpp  source2.cpp
learning_to_install/prj1/src/package2/somelib2/: CMakeLists.txt  header1.hpp  header2.hpp  source2.cpp
learning_to_install/prj1_2_combined/: CMakeLists.txt
learning_to_install/prj1_2_combined/prj1/: CMakeLists.txt
learning_to_install/prj1_2_combined/prj1/src/package1/somelib1/: CMakeLists.txt  header1.hpp  header2.hpp  source1.cpp  source2.cpp
learning_to_install/prj1_2_combined/prj1/src/package1/somelib2/: CMakeLists.txt  header1.hpp  header2.hpp  source2.cpp
learning_to_install/prj1_2_combined/prj1/src/package2/: CMakeLists.txt
learning_to_install/prj1_2_combined/prj1/src/package2/somelib1/: CMakeLists.txt  header1.hpp  source1.cpp
learning_to_install/prj1_2_combined/prj1/src/package2/somelib2/: CMakeLists.txt  source1.cpp
learning_to_install/prj2/: CMakeLists.txt  main.cpp
package1/: CMakeLists.txt  test.cpp  test.h
package1/install/lib/: libpackage1.dylib
step1-2/: CMakeLists.txt  TutorialConfig.h.in  main.cpp
step1-2/util/: CMakeLists.txt  test1.hpp  test2.hpp
step3/: CMakeLists.txt
step3-test/: CMakeLists.txt  test.cpp
step3/MathFunctions/: CMakeLists.txt  test1.cpp  test2.cpp
testlang/: CMakeLists.txt  test_module.cmake  test_script.cmake
testlang/dir1/: CMakeLists.txt
